# OpenCV_20-_Projects

./: README.md  day_03.py  main.py  pyproject.toml  requirements.txt
Day-01_to_03/: Day_01.py  Day_02.py
Day-04/: create_data.py  face_recognize.py  main.py
Day-05/: main.py  mobile.py
Day-06/: diabetes_model.weights.h5  test.py  train.py
Day-07/: main.py
